--- a/skills.css
+++ b/skills.css
@@ -49,6 +49,7 @@
     position: relative;
     white-space: nowrap;
     margin-top: 60px;
+    padding: 10px 0;
 }
 
 .skill-boxes {
